# Scout

./: .gitignore  ANONYMIZER_REPORT.md  CONTRIBUTING.md  LICENSE  PR_BODY.md  README.md  README_VISION.md  REPORT_CC4_Module_Audit_Technical_Report.md  REPORT_M2_VSCode_Extension_Parsers_Implementation.md  REPORT_Post_Review_Cleanup.md  REPORT_Rack_N10_Provider_Guide_Validation.md  REPORT_Senior_Technical_Review.md  REPORT_Track_B_Enrichment_Audit.md  REPORT_Track_B_Intent_Classifier.md  REPORT_Track_CC7_Magic_Number_Sweep.md  REPORT_Track_I2_Merge_Review.md  REPORT_Track_I5_Magic_Numbers_Centralization.md  REPORT_Track_I7F_Provider_Guide_Revision_Complete.md  REPORT_Track_I7_Provider_Guide_Technical_Review.md  REPORT_Track_I8F_ADR_Expansion_Technical_Review.md  REPORT_Track_M3_M4_Anonymization_Quality_Scoring_Infrastructure.md  REPORT_Track_N1_Router_Polish_Async_Cleanup.md  REPORT_Track_N4_Deprecation_Warning_Fix.md  REPORT_Track_N5_Circuit_Breaker_Consolidation.md  REPORT_Track_N8_Documentation_Onboarding.md  REPORT_Track_P2_LLM_Provider_Infrastructure.md  REPORT_Track_P5_Execution_Plans.md  REPORT_Track_P7_Analysis_Utilities.md  RESEARCH_REPORT_think_cheap.md  RESEARCH_REPORT_think_cheap_2026.md  SCOUT_CORE_EXTRACTION_PLAN.md  TECHNICAL_MIGRATION.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: index.md  testing.md
docs/adr/: ADR-001-provider-registry.md  ADR-002-router-dispatch-select-separation.md  ADR-003-budget-service-reservation-semantics.md  ADR-004-trust-system-design.md  ADR-005-circuit-breaker-pattern.md  README.md  (+7 more)
tests/: conftest.py
(+270 files in other folders)
